tdf#128632 vcl image lazy-load: take unit into account when setting size

It makes no sense to set the size of an image based on the swap info
when the swap info unit and the actually loaded image's unit doesn't
match.

Converting the size would be also an option, but let's wait for the
first case when a custom size is actually needed for mismatching units.

Change-Id: I96b5c237f0be5587bb2f938faf3c69fa0e1d4a5c
Reviewed-on: https://gerrit.libreoffice.org/83122
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>